<https://webkit.org/b/128448> Fix use of availability macros on recently-added APIs

Reviewed by Dan Bernstein.

* API/JSContext.h: Remove some #ifs.
* API/JSManagedValue.h: Ditto.
* API/WebKitAvailability.h: #define the macros that availability macros mentioning
newer OS X versions would expand to when building on older OS versions.
* JavaScriptCore.xcodeproj/project.pbxproj: Call the new postprocess-headers.sh.
* postprocess-headers.sh: Extracted from the Xcode project. Updated to remove content
from headers based on the __MAC_OS_X_VERSION_MIN_REQUIRED macro, and to
process WebKitAvailability.h.

Canonical link: https://commits.webkit.org/146475@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@163707 268f45cc-cd09-0410-ab3c-d52691b4dbfc