Source/JavaScriptCore/API/JSContext.h
@@ -101,15 +101,7 @@ OBJC_VISIBLE
  a callback from JavaScript this method will return nil.
 @result The currently executing JavaScript function or nil if there isn't one.
 */
-#if TARGET_OS_IPHONE || __MAC_OS_X_VERSION_MIN_REQUIRED >= 1090
 + (JSValue *)currentCallee NS_AVAILABLE(10_10, 8_0);
-#else
-#if (TARGET_OS_MAC && !(TARGET_OS_EMBEDDED || TARGET_OS_IPHONE))
-+ (JSValue *)currentCallee __attribute__((availability(macosx,__NSi_10_10)));
-#else
-+ (JSValue *)currentCallee __attribute__((availability(ios,__NSi_8_0)));
-#endif
-#endif // __MAC_OS_X_VERSION_MIN_REQUIRED >= 1090
 
 /*!
 @method
